feat: implement massive user deactivation
